--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <!--first section starts here-->
-    <section class=st-top1>
-        <div class="section-top1">
-            <div class="st-class1">
+    <section class="first-section">
+        <div class="parent">
+            <div class="left-child">
                 <h1>Stay Focused on</h1>
                 <h1><span class="orange-color">My Mission 2022</span></h1>
             </div>
@@ -27,11 +27,16 @@
             <button class="explore-btn">Explore Me</button>
             <p id="para2">Scroll down to explore more about me</p>
         </div>
-        <div class=st-class2>
+        <div class="right-child">
             <img height="300px" width="300px" src="./images/dilip.png" alt="dilip's photo">
         </div>
 
-        
+    </section>
+    <!--second section strats here-->
+    <section class="second-section">
+        <div class="sec2-head">
+            <h2>My Mission in <span class="orange-color">2022</span></h2>
+        </div>
 
     </section>
     
