--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
-    <!--Title starts here-->
+    <!--title starts here-->
     <title>Dilip Sarker</title>
     <!--css link-->
     <link rel="stylesheet" href="style.css">
