new comment added

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <p>Hard work, Perseverance, and Determination for 2022</p>
 
     </div>
+    <!---footer ends here -->
 
     
 </body>
